--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 </div>
                                 <div class="main-menu-two__call-content">
                                     <p class="main-menu-two__call-sub-title">Call anytime</p>
-                                    <h5 class="main-menu-two__call-number"><a href="tel:980009630">+ 98 (000) - 9630</a>
+                                    <h5 class="main-menu-two__call-number"><a href="tel:+91 8799-7737-45">+91 8799-7737-45</a>
                                     </h5>
                                 </div>
                             </div>
