--- a/index.html
+++ b/index.html
@@ -303,12 +303,12 @@
                             <div class="owl-carousel owl-theme thm-owl__carousel testimonial-one__carousel"
                                 data-owl-options='{
                                 "loop": true,
-                                "autoplay": false,
+                                "autoplay": true,
                                 "margin": 30,
                                 "nav": false,
                                 "dots": true,
                                 "smartSpeed": 500,
-                                "autoplayTimeout": 10000,
+                                "autoplayTimeout": 3000,
                                 "navText": ["<span class=\"fa fa-angle-left\"></span>","<span class=\"fa fa-angle-right\"></span>"],
                                 "responsive": {
                                     "0": {
@@ -492,12 +492,12 @@
                             <div class="owl-carousel owl-theme thm-owl__carousel testimonial-one__carousel"
                                 data-owl-options='{
                                 "loop": true,
-                                "autoplay": false,
+                                "autoplay": true,
                                 "margin": 30,
                                 "nav": false,
                                 "dots": true,
                                 "smartSpeed": 500,
-                                "autoplayTimeout": 10000,
+                                "autoplayTimeout": 3000,
                                 "navText": ["<span class=\"fa fa-angle-left\"></span>","<span class=\"fa fa-angle-right\"></span>"],
                                 "responsive": {
                                     "0": {
@@ -592,7 +592,7 @@
                                     "nav": false,
                                     "dots": false,
                                     "smartSpeed": 500,
-                                    "autoplayTimeout": 10000,
+                                    "autoplayTimeout": 4000,
                                     "responsive": {
                                         "0": {
                                             "margin": 30,
